templates/style.css
body {
    font-family: Calibri,Gill Sans,Arial,sans-serif;
    font-size: 12pt;
    background-color: #fff;
}
a {
    color: #005afe;
}
a:hover {
    color: #95cb14;
}
p {
    color: #333;
}
h1,h2 {
    color: #333;
    font-size: 14pt;
    font-weight: normal;
}
h2 {
    font-size: 18pt;
}
h3 {
    color: #666;
    font-weight: normal;
    font-size: 16pt;
}
a.logo svg {
    fill: #005afe;
}
a.logo:hover svg {
    fill: #95cb14;
}

header {
    height:90px;
    width: 960px;
    margin: 0 auto;
}
header a {
    font-family: Helvetica, Helvetica Nueue, Arial, sans-serif;
    text-align: center;
    text-transform: lowercase;
    padding: 12px;
    text-decoration: none;
    font-size: 17pt; 
    line-height: 25px;
}
header a.logo {
    float: left;
    width: 130px;
    margin-left: -65px;
}
nav.header {
    float: right;
    margin: 1em 0 0 auto;
}
nav.header a:hover {
    transition: border-bottom,.5s;
    border-bottom: 2px solid #95CB14;
}

/* layout */
.container {
    width: 960px;
    margin: 0 auto;
}

.alignleft {
    float: left;
    clear: left;
    max-width: 400px;
}
.aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
    clear: both;
}
.alignright {
    float: right;
    clear: right;
    margin-left: 0.7em;
    max-width: 400px;
}
img.alignright {
    margin: 0 0 0.5em 1em;
    max-width: 400px;
}
img.alignleft {
    margin: 0.5em 1em 0 0;
    max-width: 400px;
}
img.aligncenter {
    max-width: 800px;
}
.image-caption {
    background-color: #d5d5d5;
    text-align: center;
    display: inline-block;
    border-radius: 6px;
}
.image-caption.aligncenter {
    transform: translateX(-50%);
    margin-left: 50%;
}
.image-caption img {
    margin: 4px;
}
.image-caption.alignleft img,
.image-caption.alignright img {
    max-width: 400px;
}
.image-caption p {
    margin: 0.5em;
    color: #333;
}

.container {
    width: 960px;
    margin: 0 auto;
}

.gallery > ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: space-around;
}
.gallery > ul > li {
    padding: 1em;
    text-align: left;
    width: 30%;
}
.gallery > ul > li {
    border: solid 1px #f00;
}
.gallery > ul > li img {
    max-width: 200px;
}
.gallery > ul > li > ul {
    list-style: none;
    padding: 1em;
}

@media screen and (max-width: 960px) {
    header {
        height: auto;
        width: 560px;
    }
    .container {
        width: 560px;
    }
}

@media screen and (max-width: 500px) {
    header {
        height: auto;
    }
    header a {
      float: none;
      display: block;
      text-align: left;
    }
    header a.logo {
        float: none;
        width: 130px;
        margin-left: 0;
    }
        
    .header-right {
      float: none;
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: #0a0a11;
        color: #c9cdd0;
    }
    p {
        color: #c9cdd0;
    }
    h1,h2 {
        color: #adb4ba;
    }
    h3 {
        color: #999;
    }
    .image-caption {
        background-color: #555;
    }
    .image-caption p {
        color: #ddd;
    }
}
footer {
    display: flex;
    justify-content: space-between;
    margin-top: 2em;
    padding: 1em 0;
    border-top: 1px solid #ccc;
    color: #888;
    font-size: 10pt;
}

